metadata-retriever/metadata/objects/Insurance__c.object
<CustomObject>
    <description>Stores information on insurances (read only for all records)</description>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Broker Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_End_Date__c</fullName>
        <label>Insurance End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Insurance_Rating__c</fullName>
        <label>Insurance Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Start_Date__c</fullName>
        <label>Insurance Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Insured_Name__c</fullName>
        <label>Insured Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LDCL_Policy_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Policy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Cover__c</fullName>
        <label>Level of Cover</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Class__c</fullName>
        <label>Policy Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Id__c</fullName>
        <label>Policy Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_ID__c</fullName>
        <label>Underwriter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <label>Underwriter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIN</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>